objects/vlocity_ins__InsuredItemPartyRelationship__c.object
<CustomObject>
    <description>A relationship between an insured item (such as an automobile) and an insured party (such as a driver). Often used to identify the parties who regularly use or operate an item. Master-detail child object of Insured Item (AssetInsuredItem__c).</description>
    <fields>
        <fullName>vlocity_ins__AttributeSelectedValues__c</fullName>
        <label>Attribute Selected Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InsuredItemId__c</fullName>
        <label>Insured Item</label>
        <referenceTo>vlocity_ins__AssetInsuredItem__c</referenceTo>
        <relationshipLabel>Insured Item Parties</relationshipLabel>
        <relationshipName>InsuredItemInsuredPartyRelationship</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InsuredPartyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Held Product Relationship</label>
        <referenceTo>vlocity_ins__AssetPartyRelationship__c</referenceTo>
        <relationshipLabel>Insured Item Parties</relationshipLabel>
        <relationshipName>InsuredItemInsuredPartyRelationship</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Insured Item Party</label>
    <nameField>
        <label>Insured Item Party Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insured Item Parties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>